# viz-workflow

./: .dockerignore  .gitignore  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  IN_PROGRESS_VIZ_WORKFLOW.py  IWP_config_deltacomputer.json  Makefile  PRODUCTION_IWP_CONFIG.py  README.md  README.rst  cpu_ray.slurm  crs_methods_explore.ipynb  infrastructure_config.py  iwp-file-list.json  lake_change_config.py  lake_change_viz_workflow.py  merge_staged_vector_tiles.py  parsl_breakdown.ipynb  parsl_breakdown.py  parslexec.py  pyproject.toml  ray.slurm  rsync_footprints_to_nodes.py  rsync_log_to_scratch.py  rsync_merge_raster_to_scratch.py  rsync_staging_to_scratch.py  rsync_step2_raster_highest_to_scratch.py  run_raster_highest.py  save_checkpoint.py  setup.cfg  setup.py  tox.ini  viz-workflow.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish-docker-image.yaml  python-lint-test-yaml
custom_tms/: UPSArctic3413Quad.json
docker-parsl-workflow/: Dockerfile  README.md  parsl_config.py  parsl_workflow.py  requirements.txt  simple_workflow.py  viz_config.json  workflow_config.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
gke_workflow/: Dockerfile  README.md  parsl_config.py  parsl_workflow.py  requirements.txt  run-remote-job.sh  workflow_config.py
gke_workflow/manifests/: leader_deployment.yaml  leader_job.yaml  persistent_volume.yaml  persistent_volume_claim.yaml  service_account_role.yaml  service_account_role_binding.yaml
gke_workflow/parameters/: parsl_config.py  workflow_config.py
lake_change_sample/: lake_change_explore.ipynb
parsl_update_check_subsample/: ice-wedge-polygons.json  workflow_subsample.py
pdg_workflow/: StagedTo3DConverter.py  WMTSCapabilitiesGenerator.py  __init__.py  cli.py  logging_config.py  parslexec.py  pdg_workflow.py  simple_workflow.py  viz-workflow.py
pdgworkflow/: ConfigManager.py  RasterTiler.py  STACGenerator.py  StagedTo3DConverter.py  TifToWebTiles.py  WMTSCapabilitiesGenerator.py  WokflowManager.py  WorkflowManager.py  __init__.py  pdg_workflow.py
pdgworkflow/pdgraster/: RasterTiler.py  WMTSCapabilitiesGenerator.py
raster-retry/: ingmar_config.json  logging.json  raster_retry.ipynb  raster_retry.py
slurm/: BEST-v2_gpu_ray.slurm  BEST_cpu_ray_double_srun.slurm  useful_CPU_limited_cores.slurm
tests/: __init__.py  test_pdg_workflow.py
utilities/: depricated_Staging_Actors.py  fast_file_copy.sh  merge_staged_vector_tiles.py  rsync_batch_script.py  rsync_footprints_to_nodes.py  rsync_log_to_scratch.py  rsync_merge_raster_to_scratch.py  rsync_staging_to_scratch.py  rsync_staging_with_compression.py  rsync_step2_raster_highest_to_scratch.py  run_gdal_ogrmerge.py  run_raster_highest.py  save_staging_checkpoint.py  setup.py  viz_workflow.py
workflow_configs/: IN_PROGRESS_VIZ_WORKFLOW.py  PRODUCTION_IWP_CONFIG.py  ice-wedge-polygons.json  infrastructure_config.py  lake_change_config.py  logging.json  merge_staged_vector_tiles.py  pdg_workflow.py
workflow_troubleshooting/: ingmar_config.json  logging.json  workflow_redo.ipynb  workflow_redo_error.ipynb
(+6 files in other folders)
