[project]
name = "pdgworkflow"
version = "1.0.0"
description = "PDG Visualization workflow."
authors = [
    {name = "Robyn Thiessen-Bock", email = "thiessenbock@nceas.ucsb.edu"},
    {name = "Juliet Cohen", email = "jcohen@nceas.ucsb.edu"},
    {name = "Lauren Walker", email = "walker@nceas.ucsb.edu"},
    {name = "Matthew B. Jones", email = "jones@nceas.ucsb.edu"},
    {name = "Rushiraj Nenuji", email = "nenuji@nceas.ucsb.edu"},
    {name = "Alyona Kosobokova", email = "alyonak@nceas.ucsb.edu"}  
]
license = {text = "Apache Software License 2.0"}
readme = "README.md"
requires-python = ">= 3.9, < 3.10"
keywords = ["pdg_workflow"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "Click >= 7.0",
    "pdgraster @ git+https://github.com/PermafrostDiscoveryGateway/viz-raster.git@feature-raster-k8s",
    "pdgstaging @ git+https://github.com/PermafrostDiscoveryGateway/viz-staging.git@feature-tiling-k8s"
]

[project.urls]
Homepage = "https://github.com/PermafrostDiscoveryGateway/viz-workflow"
Repository = "https://github.com/PermafrostDiscoveryGateway/viz-workflow"

[project.optional-dependencies]
dev = [
    "pytest >= 7",
    "pre-commit >= 4.1",
    "black >= 24.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py39"]
include = "\\.pyi?$"
